More changes related to the Free42/Plus42 split

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
-/index.html
-/desktop/*.thumb.png
-/mobile/*.thumb.png
+/free42/index.html
+/free42/desktop/*.thumb.png
+/free42/mobile/*.thumb.png
+/plus42/index.html
+/plus42/desktop/*.thumb.png
+/plus42/mobile/*.thumb.png
